--- a/myschool/www/css/style.css
+++ b/myschool/www/css/style.css
@@ -1,6 +1,7 @@
 /* Empty. Add your own CSS if you like */
 .list .item, .title {
     text-transform: capitalize;
+    white-space: normal;
 }
 .center {
     text-align: center;
