--- a/myschoolmix/www/css/style.css
+++ b/myschoolmix/www/css/style.css
@@ -109,7 +109,7 @@ text {
 #profile-bg {
   position: fixed;
   left: 0;
-  top: -150px;
+  top: 40px;
   width: 100%;
   height: 150px;
 }
@@ -147,15 +147,15 @@ text {
 
 #profile-image {
   display: block;
-  border-radius: 100px;
-  border: 1px solid #fff;
+  border-radius: 150px;
+  border: 1px solid #f6f6f6;
   width: 128px;
   height: 128px;
   margin: 30px auto 0;
   box-shadow: 0px 0px 4px rgba(0,0,0,0.7);
   font-size: 112px;
-  background: #fff;
 }
+
 input[type="search"] {width: 100%;}
 .bar-footer .add-post-text {
   border: 1px solid #f6f6f6;
@@ -166,6 +166,7 @@ input[type="search"] {width: 100%;}
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
 }
 .bar .button.send-button {
-  border-radius: 30px;
-  margin: 0 14px 5px 14px;
+  margin: 0 0px;
+  border-radius: 0;
+  box-shadow: none;
 }
