--- a/myschoolmix/www/templates/addpost.html
+++ b/myschoolmix/www/templates/addpost.html
@@ -5,8 +5,36 @@
       <button class="button button-icon button-clear ion-image" ng-click="selectPicture()"></button>
     </ion-nav-buttons>
    <ion-content>
-      <div class="list card" ng-repeat="v in pictures">
-        <div class="item item-image">
+    <ul class="list" ng-if="role != 'hm'">
+    <li class="item-icon-left positive item item-toggle">
+      <i class="icon ion-android-contacts"></i>
+      <strong>To</strong>
+    </li>
+    <li class="item item-toggle">
+      All
+      <label class="toggle toggle-positive">
+         <input type="checkbox" ng-model="recieverToggle" ng-init="toggleClasses(recieverToggle)" ng-change="toggleClasses(recieverToggle)">
+         <div class="track">
+           <div class="handle"></div>
+         </div>
+       </label>
+    </li>
+      <li ng-hide="recieverToggle" class="item item-toggle" ng-repeat="class in classes">
+      {{class.class}} {{class.subject}}
+       <label class="toggle toggle-positive">
+         <input type="checkbox" ng-model="recievers[class.class]">
+         <div class="track">
+           <div class="handle"></div>
+         </div>
+       </label>
+      </li>
+    </ul>
+      <div class="list" ng-hide="pictures.length == 0">
+        <div class="item-icon-left positive item">
+          <i class="icon ion-image"></i>
+          <strong>Image</strong>
+        </div>
+        <div class="item item-image"  ng-repeat="v in pictures">
           <img src="{{v}}" class="full-image"/>
         </div>
       </div>
