--- a/myschoolmix/www/lib/ionic/scss/_variables.scss
+++ b/myschoolmix/www/lib/ionic/scss/_variables.scss
@@ -4,11 +4,11 @@
 
 $light:                           #fff !default;
 $stable:                          #f8f8f8 !default;
-$positive:                        #387ef5 !default;
+$positive:                        #23b7e5 !default;
 $calm:                            #11c1f3 !default;
-$balanced:                        #33cd5f !default;
+$balanced:                        #a9d96c !default;
 $energized:                       #ffc900 !default;
-$assertive:                       #ef473a !default;
+$assertive:                       #ff6c60 !default;
 $royal:                           #886aea !default;
 $dark:                            #444 !default;
 
