--- a/myschoolmix/www/templates/dashboard.html
+++ b/myschoolmix/www/templates/dashboard.html
@@ -7,9 +7,10 @@
       <chart id="tpassfailstatus" config="tpassfailConfig" ng-if="dashboardStatus != 'empty'" class="noclick"></chart>
       <chart id="tsubjects" config="tsubjectsConfig" ng-if="dashboardStatus != 'empty'"></chart>
       <chart id="tgrades" config="tgradeConfig" ng-if="dashboardStatus != 'empty'" class="noclick"></chart>
+      <chart id="toppersubjects" config="topperSubjectsConfig" ng-if="dashboardStatus != 'empty'"></chart>
       <div class="list">
       <a listtodash id="{{v.studentid}}-{{v.student}}" class="item item-icon-left first" href="#/app/studentdashboard" ng-repeat="(k, v) in toppers | orderBy: 'total':'reverse'" ng-if="dashboardStatus != 'empty'">
-      <i class="icon ion-trophy positive"></i> {{v.student}} <span class="badge badge-positive">{{v.total}}</span></a> 
+      <i class="icon ion-trophy positive"></i> {{v.student}} <span class="badge badge-positive">{{v.total}}</span></a>
       <a class="item item-icon-left" href="#" ng-if="dashboardStatus == 'empty'"><i class="icon ion-compose positive"></i> No marks added yet</a> <a class="item item-icon-left" href="#/app/allstudents/{{standard}}/{{division}}/all/all"><i class="icon ion-person positive"></i> View all students</a> <a class="item item-icon-left" href="#/app/classprofile/{{standard}}/{{division}}"><i class="icon ion-easel positive"></i> View class profile</a></div>
    </ion-content>
 </ion-view>
