--- a/myschool/www/templates/home.html
+++ b/myschool/www/templates/home.html
@@ -1,5 +1,8 @@
 <ion-view title="Home" ng-controller="LoginCtrl">
    <ion-content class="has-header home">
+   <div class="row"><div class="col" style="text-align:right;font-size:30px;padding-right:10px; cursor:pointer">
+   <i class="icon ion-edit" ng-click="showUsers()"></i>
+   </div></div>
       <div class="row">
          <div id="logo" class="col center">
             <h1><span><i class="icon ion-leaf balanced"></i><i class="icon ion-university positive"></i></span></h1>
