--- a/myschool/www/templates/selectusers.html
+++ b/myschool/www/templates/selectusers.html
@@ -1,12 +1,12 @@
- <div class="modal">
-        <header class="bar bar-header bar-positive">
+ <ion-view class="modal">
+        <ion-header class="bar bar-header bar-positive">
           <h1 class="title">Select a user to Login</h1>
           <div class="button button-clear" ng-click="modal.hide()"><span class="icon ion-close"></span></div>
-        </header>
+        </ion-header>
+        <ion-content has-header="true" padding="true">
         <br/><br/>
-        <content has-header="true" padding="true">
-			<div class="list">
-			<a ng-click="fillUser(modal, user.email,user.password)" class="item item-icon-left positive" ng-repeat="user in users"><i class="icon ion-person"></i><h2>{{user.title}}</h2></a>
-			</div>
-        </content>
-      </div>
+			<ion-list>
+			<ion-item ng-click="fillUser(modal, user.email,user.password)" class="item item-icon-left positive" ng-repeat="user in users"><i class="icon ion-person"></i><h2>{{user.title}}</h2></ion-item>
+			</ion-list>
+        </ion-content>
+      </ion-view>
