--- a/myschoolLight/app/templates/classprofile.html
+++ b/myschoolLight/app/templates/classprofile.html
@@ -1,6 +1,6 @@
 <ion-view title="{{title}}" ng-init="getStudentsData()" class="ng-cloak">
    <ion-content class="has-header">
-      <div id="profile-bg"><img src="img/bg.jpg"></div>
+      <div id="profile-bg"><img src="../images/bg.jpg"></div>
       <div id="content" ng-hide="loading">
         <div id="profile-info">
 <!--           <img id="profile-image" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/94311/me.png"> -->
