--- a/myschoolLight/app/templates/studentprofile.html
+++ b/myschoolLight/app/templates/studentprofile.html
@@ -1,7 +1,7 @@
 <ion-view ng-init="getStudentsData()">
    <ion-nav-title>{{user.name}} Profile</ion-nav-title>
    <ion-content class="has-header">
-      <div id="profile-bg"><img src="../img/bg.jpg"></div>
+      <div id="profile-bg"><img src="../images/bg.jpg"></div>
       <div id="content" ng-hide="loading">
         <div id="profile-info">
 <!--           <img id="profile-image" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/94311/me.png"> -->
