--- a/myschoolLight/app/templates/teacherprofile.html
+++ b/myschoolLight/app/templates/teacherprofile.html
@@ -1,7 +1,7 @@
 <ion-view cache-view="false" ng-init="getTeacherData()" class="ng-cloak">
    <ion-nav-title>{{user.name}} Profile</ion-nav-title>
    <ion-content class="has-header">
-      <div id="profile-bg"><img src="/img/bg.jpg"></div>
+      <div id="profile-bg"><img src="../images/bg.jpg"></div>
       <div id="content">
         <div id="profile-info">
 <!--           <img id="profile-image" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/94311/me.png"> -->
