--- a/myschool/www/templates/hmdashboard.html
+++ b/myschool/www/templates/hmdashboard.html
@@ -4,9 +4,7 @@
    </ion-header-bar>
    <ion-content class="has-header" >
       <ion-refresher pulling-text="Pull to refresh" on-refresh="getMarksData()"></ion-refresher>
-      <div class="row" ng-if="dashboardStatus == 'empty'">
-         <div class="col">Dashboard is empty</div>
-      </div>
+      <a class="item item-icon-left" href="#" ng-if="dashboardStatus == 'empty'"><i class="icon ion-compose positive"></i>Dashboard is empty</a>
       <chart id="passfailstatus" config="passfailConfig" ng-if="dashboardStatus != 'empty'" class="noclick"></chart>
       <chart id="subjects" config="subjectsConfig" ng-if="dashboardStatus != 'empty'"></chart>
       <chart id="grades" config="gradeConfig" ng-if="dashboardStatus != 'empty'" class="noclick"></chart>
