--- a/greenEd/www/templates/teacherdashboard.html
+++ b/greenEd/www/templates/teacherdashboard.html
@@ -4,6 +4,7 @@
    </ion-header-bar>
    <ion-content class="has-header">
       <ion-refresher pulling-text="Pull to refresh" on-refresh="getMarksData()"></ion-refresher>
+      <a class="item item-icon-left" href="#" ng-if="dashboardStatus == 'empty'"><i class="icon ion-compose positive"></i>Dashboard is empty</a>
       <chart id="tpassfailstatus" config="tpassfailConfig" ng-if="dashboardStatus != 'empty'" class="noclick"></chart>
       <chart id="tsubjects" config="tsubjectsConfig" ng-if="dashboardStatus != 'empty'"></chart>
       <chart id="tgrades" config="tgradeConfig" ng-if="dashboardStatus != 'empty'" class="noclick"></chart>
