--- a/greenEd/www/templates/hmdashboard.html
+++ b/greenEd/www/templates/hmdashboard.html
@@ -4,9 +4,9 @@
    </ion-header-bar>
    <ion-content class="has-header" >
       <ion-refresher pulling-text="Pull to refresh" on-refresh="getMarksData()"></ion-refresher>
-      <div class="row" ng-if="dashboardStatus == 'empty'">
-         <div class="col">Dashboard is empty</div>
-      </div>
+      <ion-list ng-if="dashboardStatus == 'empty'">
+         <ion-item class="item item-icon-left"><i class="icon ion-ios-list"></i>Dashboard is empty</ion-item>
+      </ion-list>
       <chart id="passfailstatus" config="passfailConfig" ng-if="dashboardStatus != 'empty'" class="noclick"></chart>
       <chart id="subjects" config="subjectsConfig" ng-if="dashboardStatus != 'empty'"></chart>
       <chart id="grades" config="gradeConfig" ng-if="dashboardStatus != 'empty'" class="noclick"></chart>
