--- a/greenEd/www/templates/allteachers.html
+++ b/greenEd/www/templates/allteachers.html
@@ -12,7 +12,7 @@
    <ion-content class="has-header">
    	  <div ng-if="filterStatus" style="height:44px;"></div>
       <ion-list>
-         <ion-item collection-repeat="user in users | filter:query.search.value | orderBy:'name'" class="item item-icon-left positive" href="#/app/teacherdashboard/{{user.name}}">
+         <ion-item collection-repeat="user in users | filter:query.search.value | orderBy:'name'" class="item item-icon-left positive" href="#/app/teacherdashboard/{{user.name}}/{{user._id}}">
             <i class="icon ion-person"></i>
             <h2>{{user.name}}</h2>
          </ion-item>
