--- a/greenEd/www/templates/selectusers.html
+++ b/greenEd/www/templates/selectusers.html
@@ -1,6 +1,6 @@
  <ion-view class="modal">
         <ion-header class="bar bar-header bar-positive">
-          <h1 class="title">Select a user to Login</h1>
+          <h1 class="title">Select a Demo user to Login</h1>
           <div class="button button-clear" ng-click="modal.hide()"><span class="icon ion-close"></span></div>
         </ion-header>
         <ion-content has-header="true" padding="true">
