--- a/greenEd/www/templates/teacherdashboard.html
+++ b/greenEd/www/templates/teacherdashboard.html
@@ -11,7 +11,7 @@
       <chart id="toppersubjects" config="topperSubjectsConfig" ng-if="dashboardStatus != 'empty'"></chart>
       <ion-list ng-if="dashboardStatus != 'empty'">
          <div class="collection-repeat-container"><ion-item class="item-icon-left" href="#"><i class="icon ion-trophy positive"></i> <span style="color:#aaa;font-weight:bold">Class - Topper</span> <span class="badge">Total</span></ion-item></div>
-         <ion-item class="item-icon-left" collection-repeat="v in toppers" href="#/app/studentdashboard/{{v.studentid}}/{{v.student}}"><i class="icon ion-person positive"></i> {{v.standard}}{{v.division}} : {{v.student}} <span class="badge badge-positive">{{v.total}}</span></ion-item>
+         <ion-item class="item-icon-left" collection-repeat="v in toppers" href="#/app/studentdashboard/{{v.studentid}}/{{v.student}}"><i class="icon ion-person positive"></i> {{v.standard}}<span ng-hide="v.division == 'all'">{{v.division}}</span> : {{v.student}} <span class="badge badge-positive">{{v.total}}</span></ion-item>
       </ion-list>
       <div class="list"> 
       <a class="item item-icon-left" href="#" ng-if="dashboardStatus == 'empty'"><i class="icon ion-compose positive"></i> No marks added yet</a> <a class="item item-icon-left" href="#/app/allstudents/teacher/{{username}}/all/all"><i class="icon ion-person positive"></i> View all students</a> <a class="item item-icon-left" href="#/app/teacherprofile/{{username}}"><i class="icon ion-easel positive"></i> View profile</a></div>
