--- a/greenEd/www/templates/studentsfiltered.html
+++ b/greenEd/www/templates/studentsfiltered.html
@@ -12,9 +12,9 @@
    <ion-content class="has-header">
       <div ng-if="filterStatus" style="height:44px;"></div>
       <ion-list>
-         <ion-item ng-repeat="user in users | filter:query.search.value | orderBy:['standard','division','name']" class="item item-icon-left positive" href="#/app/studentdashboard/{{user._id}}/{{user.name}}">
+         <ion-item ng-repeat="user in users | filter:query.search.value | orderBy:['rank','total']" class="item item-icon-left positive" href="#/app/studentdashboard/{{user.studentid}}/{{user.student}}">
             <i class="icon ion-person"></i>
-            <h2>{{user.standard}}<span ng-hide="user.division == 'all'">{{user.division}}</span> : {{user.name}}</h2>
+            <h2>{{user.standard}}<span ng-hide="user.division == 'all'">{{user.division}}</span> : {{user.student}}</h2>
          </ion-item>
       </ion-list>
       <div class="list" ng-if="allStudentsStatus == false">
