--- a/greenEd/www/templates/allstudents.html
+++ b/greenEd/www/templates/allstudents.html
@@ -1,4 +1,4 @@
-<ion-view ng-init="getStudentsData()" hide-nav-bar="filterStatus">
+<ion-view hide-nav-bar="filterStatus">
    <ion-nav-title>{{title}}</ion-nav-title>
     <div class="bar bar-header item-input-inset header-search bar-positive padding" ng-show="filterStatus">
   	<ion-search placeholder="Search" filter="query.search"></ion-search>
@@ -12,7 +12,7 @@
    <ion-content class="has-header">
    	  <div ng-if="filterStatus" style="height:44px;"></div>
       <ion-list>
-         <ion-item collection-repeat="user in users | filter:query.search.value | orderBy:['standard','division','name']" class="item item-icon-left positive" href="#/app/studentdashboard/{{user._id}}/{{user.name}}">
+         <ion-item ng-repeat="user in users | filter:query.search.value | orderBy:['standard','division','name']" class="item item-icon-left positive" href="#/app/studentdashboard/{{user._id}}/{{user.name}}">
             <i class="icon ion-person"></i>
             <h2>{{user.standard}}<span ng-hide="user.division == 'all'">{{user.division}}</span> : {{user.name}}</h2>
          </ion-item>
