--- a/greenEd/www/templates/allteachers.html
+++ b/greenEd/www/templates/allteachers.html
@@ -1,5 +1,4 @@
-<ion-view ng-init="getTeachersData()"hide-nav-bar="filterStatus">
-   	<ion-nav-title>{{title}}</ion-nav-title>
+<ion-view title="Teachers" hide-nav-bar="filterStatus">
 	<div class="bar bar-header item-input-inset header-search bar-positive padding" ng-show="filterStatus">
   	<ion-search placeholder="Search" filter="query.search"></ion-search>
   	<div class="buttons buttons-right header-item"><span class="right-buttons">
@@ -12,7 +11,7 @@
    <ion-content class="has-header">
    	  <div ng-if="filterStatus" style="height:44px;"></div>
       <ion-list>
-         <ion-item collection-repeat="user in users | filter:query.search.value | orderBy:'name'" class="item item-icon-left positive" href="#/app/teacherdashboard/{{user.name}}/{{user._id}}">
+         <ion-item ng-repeat="user in users" class="item item-icon-left positive" href="#/app/teacherdashboard/{{user.name}}/{{user.id}}">
             <i class="icon ion-person"></i>
             <h2>{{user.name}}</h2>
          </ion-item>
