--- a/greenEd/www/css/style.css
+++ b/greenEd/www/css/style.css
@@ -23,6 +23,9 @@
 .center {
     text-align: center;
 }
+.pointer {
+  cursor: pointer;
+}
 .home .item-input .icon {
   padding: 0 10px 0 0;
   font-size: 20px;
