--- a/greenEd/www/templates/allteachers.html
+++ b/greenEd/www/templates/allteachers.html
@@ -11,7 +11,7 @@
    <ion-content class="has-header">
    	  <div ng-if="filterStatus" style="height:44px;"></div>
       <ion-list>
-         <ion-item ng-repeat="user in users" class="item item-icon-left positive" href="#/app/teacherdashboard/{{user.name}}/{{user.id}}">
+         <ion-item collection-repeat="user in users | filter:query.search.value" class="item item-icon-left positive" href="#/app/teacherdashboard/{{user.name}}/{{user.id}}">
             <i class="icon ion-person"></i>
             <h2>{{user.name}}</h2>
          </ion-item>
