--- a/greenEd/www/templates/hmdashboard.html
+++ b/greenEd/www/templates/hmdashboard.html
@@ -12,7 +12,7 @@
       <chart id="grades" config="gradeConfig"></chart>
       <ion-list ng-show="dashboard">
          <div class="collection-repeat-container"><ion-item class="item-icon-left" href="#"><i class="icon ion-trophy positive"></i> <h2><span style="color:#aaa;font-weight:bold">Class - Topper</span> <span class="badge">Total</span></h2></ion-item></div>
-         <ion-item class="item-icon-left" ng-repeat="v in toppers" href="#/app/studentdashboard/{{v.studentid}}/{{v.student}}"><i class="icon ion-person positive"></i> <h2>{{v.standard}}<span ng-hide="v.division == 'ALL'">:{{v.division}}</span> - {{v.student}} <span class="badge badge-positive">{{v.total}}</span></h2></ion-item>
+         <ion-item class="item-icon-left" ng-repeat="v in toppers" href="#/app/studentdashboard/{{v.studentid}}"><i class="icon ion-person positive"></i> <h2>{{v.standard}}<span ng-hide="v.division == 'ALL'">:{{v.division}}</span> - {{v.student}} <span class="badge badge-positive">{{v.total}}</span></h2></ion-item>
       </ion-list>
    </ion-content>
 </ion-view>
