--- a/angularfireapp/app/views/navbar.html
+++ b/angularfireapp/app/views/navbar.html
@@ -1,5 +1,5 @@
-<!--header start-->
-    <header class="header-frontend" ng-controller="NavbarCtrl">
+ <!--header start-->
+<!--    <header class="header-frontend" ng-controller="NavbarCtrl">
         <div class="navbar navbar-default navbar-static-top">
             <div class="container">
                 <div class="navbar-header">
@@ -8,7 +8,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">Green<span>Ed</span></a>
+                    <a class="navbar-brand" href="">Green<span>Ed</span></a>
                 </div>
                 <div class="navbar-collapse collapse ">
 
@@ -16,32 +16,18 @@
                       <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
                       <a ng-href="{{item.link}}">{{item.title}}</a>
                       </li>
-                      <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}"><a href="/login">Login</a></li>
+                      <li ng-hide="isLoggedIn()" ng-class="{active: isActive('/login')}"><a href="/#/login">Login</a></li>
                       <li ng-show="isLoggedIn()"><p class="navbar-text">Hello {{ getCurrentUser().name }}</p> </li>
                       <li ng-show="isLoggedIn()" ng-class="{active: isActive('/settings')}"><a href="/settings"><span class="glyphicon glyphicon-cog"></span></a></li>
                       <li ng-show="isLoggedIn()" ng-class="{active: isActive('/logout')}"><a href="" ng-click="logout()">Logout</a></li>
-                      <!--   <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">Service</a></li>
-                        <li class="dropdown ">
-                            <a href="#" class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Feature <b class=" icon-angle-down"></b></a>
-                            <ul class="dropdown-menu">
-                                <li><a href="typography.html">Typography</a></li>
-                                <li><a href="button.html">Buttons</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="price.html">Price</a></li>
-                        <li><a href="blog.html">Blog</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><input type="text" placeholder=" Search" class="form-control search"></li> -->
+          
                     </ul>
                 </div>
             </div>
         </div>
-    </header>
+    </header> -->
     <!--header end-->
-<!-- <div class="navbar navbar-default navbar-static-top" ng-controller="NavbarCtrl">
+<div class="navbar navbar-default navbar-static-top" ng-controller="NavbarCtrl">
   <div class="container">
     <div class="navbar-header">
       <button class="navbar-toggle" type="button" ng-click="isCollapsed = !isCollapsed">
@@ -55,7 +41,7 @@
     <div collapse="isCollapsed" class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
         <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
-            <a ng-href="{{item.link}}">{{item.title}}</a>
+            <a ng-href="/#{{item.link}}">{{item.title}}</a>
         </li>
         <li ng-show="isAdmin()" ng-class="{active: isActive('/admin')}"><a href="/admin">Admin</a></li>
       </ul>
@@ -69,4 +55,4 @@
       </ul>
     </div>
   </div>
-</div> -->
+</div>
