--- a/greenEd/www/templates/allstudents.html
+++ b/greenEd/www/templates/allstudents.html
@@ -12,7 +12,7 @@
    <ion-content class="has-header">
    	  <div ng-if="filterStatus" style="height:44px;"></div>
       <ion-list>
-         <ion-item collection-repeat="student in students | filter:query.search.value" class="item item-icon-left positive" href="#/app/studentdashboard/{{student.uid}}">
+         <ion-item collection-repeat="student in students | filter:query.search.value" class="item item-icon-left positive" href="#/app/studentdashboard/{{student.uid}}/{{student.standard}}-{{student.division}}">
             <i class="icon ion-person"></i>
             <h2>{{student.standard}}<span ng-hide="student.division == 'all'">{{student.division}}</span> : {{student.name}}</h2>
          </ion-item>
