--- a/greenEd/www/templates/studentoverall.html
+++ b/greenEd/www/templates/studentoverall.html
@@ -1,1 +1,24 @@
-<ion-view cache-view="{{cache}}" ng-init="getMarksData()"><ion-nav-title>{{title}} Overall Dashboard</ion-nav-title><ion-header-bar class="bar-positive"><h1 class="title">Pull to Refresh!</h1></ion-header-bar><ion-content class="has-header"><ion-refresher pulling-text="Pull to refresh" on-refresh="getMarksData()"></ion-refresher><a class="item item-icon-left" href="#" ng-if="dashboardStatus == 'empty'"><i class="icon ion-compose positive"></i>Dashboard is empty</a><chart id="somarks" config="somarksConfig" ng-if="dashboardStatus != 'empty'"></chart><chart id="allmarks" config="allmarksConfig" ng-if="dashboardStatus != 'empty'"></chart><chart id="sosubjects" config="sosubjectsConfig" ng-if="dashboardStatus != 'empty'"></chart><chart id="ranks" config="ranksConfig" ng-if="dashboardStatus != 'empty'"></chart><chart id="soattendance" config="soattendanceConfig" ng-if="dashboardStatus != 'empty'"></chart><chart id="opassfail" config="opassfailConfig" ng-if="dashboardStatus != 'empty'" class="noclick"></chart></ion-content></ion-view>
+<ion-view title="{{title}}">
+   <ion-nav-buttons side="right">
+   <button ng-show="dashboard" class="button button-icon button-clear ion-funnel" ng-click="filterData()"></button>
+   </ion-nav-buttons>
+   <ion-content class="has-header" >
+      <ion-refresher pulling-text="Pull to refresh" on-refresh="getMarksData(true)"></ion-refresher>
+      <ion-list ng-show="empty">
+         <ion-item class="item item-icon-left"><i class="icon ion-ios-list positive"></i>Dashboard is empty</ion-item>
+      </ion-list>
+      <chart id="somarks" config="somarksConfig"></chart>
+      <div class="padding"></div>
+
+      <chart id="allmarks" config="allmarksConfig"></chart>
+      <div class="padding"></div>
+      <chart id="sosubjects" config="sosubjectsConfig"></chart>
+      <div class="padding"></div>
+
+      <chart id="ranks" config="ranksConfig"></chart>
+      <div class="padding"></div>
+
+      <chart id="soattendance" config="soattendanceConfig"></chart>
+<!--       <chart id="opassfail" config="opassfailConfig" class="noclick"></chart> -->
+   </ion-content>
+</ion-view>
