--- a/greenEd/www/templates/hmdashboard.html
+++ b/greenEd/www/templates/hmdashboard.html
@@ -8,11 +8,12 @@
          <ion-item class="item item-icon-left"><i class="icon ion-ios-list positive"></i>Dashboard is empty</ion-item>
       </ion-list>
       <chart id="passfailstatus" config="passfailConfig" class="noclick"></chart>
+      <div class="padding"></div>
       <chart id="subjects" config="subjectsConfig"></chart>
       <chart id="grades" config="gradeConfig"></chart>
       <ion-list ng-show="dashboard">
          <div class="collection-repeat-container"><ion-item class="item-icon-left" href="#"><i class="icon ion-trophy positive"></i> <h2><span style="color:#aaa;font-weight:bold">Class - Topper</span> <span class="badge">Total</span></h2></ion-item></div>
-         <ion-item class="item-icon-left" ng-repeat="v in toppers" href="#/app/studentdashboard/{{v.studentid}}"><i class="icon ion-person positive"></i> <h2>{{v.standard}}<span ng-hide="v.division == 'ALL'">:{{v.division}}</span> - {{v.student}} <span class="badge badge-positive">{{v.total}}</span></h2></ion-item>
+         <ion-item class="item-icon-left" ng-repeat="v in toppers" href="#/app/studentdashboard/{{v.studentid}}/{{v.class}}"><i class="icon ion-person positive"></i> <h2>{{v.class}} - {{v.student}} <span class="badge badge-positive">{{v.total}}</span></h2></ion-item>
       </ion-list>
    </ion-content>
 </ion-view>
