--- a/greenEd/www/templates/markstudents.html
+++ b/greenEd/www/templates/markstudents.html
@@ -12,7 +12,7 @@
    <ion-content class="has-header">
    	  <div ng-if="filterStatus" style="height:44px;"></div>
       <ion-list>
-         <ion-item collection-repeat="user in users | filter:query.search.value" class="item item-icon-left positive" href="#/app/studentdashboard/{{user.uid}}/{{user.name}}">
+         <ion-item collection-repeat="user in users | filter:query.search.value" class="item item-icon-left positive" href="#/app/studentdashboard/{{user.uid}}/{{user.class}}">
             <i class="icon ion-person"></i>
             <h2>{{user.class.replace("-all", "")}} : {{user.name}}</h2>
          </ion-item>
