--- a/greenEd/www/templates/teacherdashboard.html
+++ b/greenEd/www/templates/teacherdashboard.html
@@ -1,4 +1,4 @@
-<ion-view title="{{title}}">
+<ion-view cache-view="false" title="{{title}}">
    <ion-nav-buttons side="right">
    <button ng-show="dashboard" class="button button-icon button-clear ion-funnel" ng-click="filterData()"></button>
    </ion-nav-buttons>
