--- a/greenEd/www/templates/wall.html
+++ b/greenEd/www/templates/wall.html
@@ -4,7 +4,7 @@
   </ion-nav-buttons>
    <ion-content>
    <ion-refresher pulling-text="Pull to refresh" on-refresh="getWall()"></ion-refresher>
-    <div ng-hide="walls" class="list">
+    <div ng-show="empty" class="list">
     <a class="item item-icon-left" href="#">
     <i class="icon ion-ios-list positive"></i>
     No wall item found
