--- a/greenEd/www/templates/menu.html
+++ b/greenEd/www/templates/menu.html
@@ -9,7 +9,7 @@
    <ion-side-menu side="left">
       <ion-content>
          <ion-list ng-init="linkItem = {}">
-            <ion-item nav-clear class="center menu-logo"><h2><i class="icon ion-person positive" style="font-size:60px"></i></h2><h2>Welcome {{username}}</h2></ion-item>
+            <ion-item nav-clear class="center menu-logo"><h2><i class="icon ion-person positive" style="font-size:60px"></i></h2><h2>Welcome {{user.name}}</h2></ion-item>
             <ion-item nav-clear menu-close class="item-icon-left" href="#/app/wall"><i class="icon ion-ios-list positive"></i><h2>Wall</h2></ion-item>
             <ion-item nav-clear menu-close class="item-icon-left" href="#/app/messages"><i class="icon ion-chatboxes positive"></i><h2>Messages</h2></ion-item>            
             <div ng-repeat="link in menuLinks.Links">
