--- a/greenEd/www/css/style.css
+++ b/greenEd/www/css/style.css
@@ -212,7 +212,7 @@ button.ion-android-send {
 
 .message-detail {
   white-space: nowrap;
-  font-size: 14px;
+  font-size: 13px;
 }
 
 .bar.item-input-inset .item-input-wrapper input {
@@ -230,10 +230,11 @@ button.ion-android-send {
 .chat-bubble {
   border-radius: 5px;
   display: inline-block;
-  padding: 10px 18px;
+  padding: 5px 10px;
   position: relative;
-  margin: 10px;
+  margin: 5px;
   max-width: 80%;
+  line-height: 18px;
 }
 
 .chat-bubble:before {
