--- a/greenEd/www/templates/addpost.html
+++ b/greenEd/www/templates/addpost.html
@@ -9,15 +9,15 @@
       <button class="button button-icon button-clear ion-image" ng-click="takePicture('browse')"></button>
     </ion-nav-buttons>
    <ion-content>
-<!--       <div class="list" ng-hide="post.pictures.length == 0">
+      <div class="list" ng-hide="post.pictures.length == 0">
         <div class="item-icon-left positive item">
           <i class="icon ion-image"></i>
           <strong>Image</strong>
         </div>
         <div class="item item-image"  ng-repeat="v in post.pictures">
-          <img src="{{v}}" class="full-image"/>
+          <img ng-src="data:image/jpeg;base64,{{v}}" class="full-image"/>
         </div>
-      </div> -->
+      </div>
    </ion-content>
    <div class="row bar bar-footer">
       <input type="text" class="col col-80 add-post-text" placeholder="What's on your mind ???" ng-model="post.message">
