--- a/greenEd/www/templates/messagebox.html
+++ b/greenEd/www/templates/messagebox.html
@@ -15,18 +15,14 @@
                   on-hold="onMessageHold($event, $index, message)">
       
                   <div ng-if="user.uid !== message.userId">
-                      
-                    <img ng-click="viewProfile(message)" class="profile-pic left" 
-                          ng-src="{{toUser.pic}}" onerror="onProfilePicError(this)" />
-      
+
                       <div class="chat-bubble left">
       
                           <div class="message bold" ng-bind-html="message.text | nl2br" autolinker>
                           </div>
       
                           <div class="message-detail">
-                              <span ng-hide="message.type == 'single'"
-                                  class="bold">{{message.name}}</span>,
+                              <span ng-hide="message.type == 'single'">{{message.name}},</span>
                               <span am-time-ago="message.date"></span>
                           </div>
       
@@ -44,8 +40,8 @@
                           </div>
       
                           <div class="message-detail">
-                              <span ng-hide="message.type == 'single'">{{message.name}}</span>
-                              <span am-time-ago="message.date"></span>
+                              <span ng-hide="message.type == 'single'">{{message.name}},</span>
+                              <span am-time-ago="message.date"> </span>
                           </div>
       
                       </div>
