--- a/greenEd/www/templates/allclasses.html
+++ b/greenEd/www/templates/allclasses.html
@@ -1,12 +1,14 @@
 <ion-view title="Classes" hide-nav-bar="filterStatus">
 <div class="bar bar-header item-input-inset header-search bar-positive padding" ng-show="filterStatus">
-  	<ion-search placeholder="Search" filter="query.search"></ion-search>
-  	<div class="buttons buttons-right header-item"><span class="right-buttons">
-	<button class="button button-icon button-clear ion-ios-search" ng-click="filterStatus = !filterStatus"></button>
-    </span></div>
-	</div>
+    <span class="left-buttons">
+  <button class="button button-icon button-clear ion-android-arrow-back" ng-click="filterStatus = !filterStatus"></button>
+    </span>
+    <ion-search placeholder="Search" filter="query.search"></ion-search>
+    <div class="buttons buttons-right header-item">
+    </div>
+  </div>
 	<ion-nav-buttons side="right">
-	<button class="button button-icon button-clear ion-ios-search" ng-click="filterStatus = !filterStatus"></button>
+	<button class="button button-icon button-clear ion-ios-search" ng-click="changeStatus()"></button>
     </ion-nav-buttons>
    <ion-content class="has-header">
    	  <div ng-if="filterStatus" style="height:44px;"></div>
