--- a/greenEd/www/templates/allstudents.html
+++ b/greenEd/www/templates/allstudents.html
@@ -1,18 +1,20 @@
 <ion-view hide-nav-bar="filterStatus">
    <ion-nav-title>{{title}}</ion-nav-title>
     <div class="bar bar-header item-input-inset header-search bar-positive padding" ng-show="filterStatus">
-  	<ion-search placeholder="Search" filter="query.search"></ion-search>
-  	<div class="buttons buttons-right header-item"><span class="right-buttons">
-	<button class="button button-icon button-clear ion-ios-search" ng-click="filterStatus = !filterStatus"></button>
-    </span></div>
+    <span class="left-buttons">
+	<button class="button button-icon button-clear ion-android-arrow-back" ng-click="filterStatus = !filterStatus"></button>
+    </span>
+    <ion-search placeholder="Search" filter="query.search"></ion-search>
+    <div class="buttons buttons-right header-item">
+    </div>
 	</div>
 	<ion-nav-buttons side="right">
-	<button class="button button-icon button-clear ion-ios-search" ng-click="filterStatus = !filterStatus"></button>
+	<button class="button button-icon button-clear ion-ios-search" ng-click="changeStatus()"></button>
     </ion-nav-buttons>
    <ion-content class="has-header">
    	  <div ng-if="filterStatus" style="height:44px;"></div>
       <ion-list>
-         <ion-item collection-repeat="student in students | filter:query.search.value" class="item item-icon-left positive" href="#/app/studentdashboard/{{student.standard}}-{{student.division}}/{{student.uid}}/{{student.name}}">
+         <ion-item collection-repeat="student in students | filter:query.search.value | orderBy:['standard', 'name']" class="item item-icon-left positive" href="#/app/studentdashboard/{{student.standard}}-{{student.division}}/{{student.uid}}/{{student.name}}">
             <i class="icon ion-person"></i>
             <h2>{{student.standard}}<span ng-hide="student.division == 'all'">{{student.division}}</span> : {{student.name}}</h2>
          </ion-item>
