--- a/greenEd/www/templates/login.html
+++ b/greenEd/www/templates/login.html
@@ -7,7 +7,7 @@
    </div></div>
    <div class="row"><div id="logo" class="col center"><h1><span><i class="icon ion-leaf balanced"></i><i class="icon ion-university positive"></i></span></h1><h4><span>Green</span><span>Ed</span></h4><div>The Future of Education</div></div></div>
    <form ng-submit="login()">
-   <div class="list list-inset"><label class="item item-input"><i class="icon ion-person positive"></i> <input class="custom-icon" type="text" ng-model="user.email" placeholder="Username"></label><label class="item item-input last"><i class="icon ion-locked positive custom-icon"></i> <input class="custom-icon" type="password" ng-model="user.password" placeholder="Password"></label><button class="button button-block button-positive" ng-click="validateUser()">Log in</button></div>
+   <div class="list list-inset"><label class="item item-input"><i class="icon ion-person positive"></i> <input class="custom-icon" type="text" ng-model="user.username" placeholder="Username"></label><label class="item item-input last"><i class="icon ion-locked positive custom-icon"></i> <input class="custom-icon" type="password" ng-model="user.password" placeholder="Password"></label><button class="button button-block button-positive" ng-click="validateUser()">Log in</button></div>
    </form>
 </ion-content>
 </ion-view>
