--- a/greenEd/www/templates/messagebox.html
+++ b/greenEd/www/templates/messagebox.html
@@ -54,7 +54,11 @@
           </ion-content>
       
           <form name="sendMessageForm" ng-submit="sendMessage(sendMessageForm)" novalidate>
-              <ion-footer-bar class="bar-stable item-input-inset message-footer" keyboard-attach>
+             <div class="row bar bar-footer" keyboard-attach>
+                <input type="text" class="col col-80 add-post-text" placeholder="Send {{toUser.name}} a message" ng-model="input.message" maxlength="1500" msd-elastic>
+                <button class="col send-button button button-icon icon-center button-clean ion-android-send" type="submit" ng-disabled="!input.message || input.message === ''"></button>
+          </div>
+<!--               <ion-footer-bar class="bar-stable item-input-inset message-footer" keyboard-attach>
                   <label class="item-input-wrapper">
                       <textarea ng-model="input.message" value="" placeholder="Send {{toUser.name}} a message..." required minlength="1" maxlength="1500" msd-elastic></textarea>
                   </label>
@@ -63,7 +67,7 @@
                         ng-disabled="!input.message || input.message === ''">
                     </button>
                   </div>
-              </ion-footer-bar>
+              </ion-footer-bar> -->
           </form>
           
       </ion-view>
