--- a/greenEd/www/templates/timetable.html
+++ b/greenEd/www/templates/timetable.html
@@ -1,4 +1,4 @@
-<ion-view ng-init="getTimetable()">
+<ion-view>
 <ion-nav-title class="title title-center">{{title}}</ion-nav-title>
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon show" menu-toggle="left"></button>
