--- a/greenEd/www/templates/teacherdashboard.html
+++ b/greenEd/www/templates/teacherdashboard.html
@@ -9,7 +9,7 @@
       </ion-list>
       <chart id="tpassfailstatus" config="tpassfailConfig" class="noclick"></chart>
       <chart id="tsubjects" config="tsubjectsConfig"></chart>
-      <chart id="tgrades" config="tgradeConfig"></chart>
+      <!-- <chart id="tgrades" config="tgradeConfig"></chart> -->
       <ion-list ng-show="dashboard">
          <div class="collection-repeat-container"><ion-item class="item-icon-left" href="#"><i class="icon ion-trophy positive"></i> <h2><span style="color:#aaa;font-weight:bold">Class - Topper</span> <span class="badge">Total</span></h2></ion-item></div>
          <span ng-repeat="(k, stoppers) in toppers">
