--- a/greenEd/www/templates/messagebox.html
+++ b/greenEd/www/templates/messagebox.html
@@ -18,7 +18,7 @@
 
                       <div class="chat-bubble left">
       
-                          <div class="message bold" ng-bind-html="message.text | nl2br" autolinker>
+                          <div class="message bold" ng-bind-html="message.text | nl2br">
                           </div>
       
                           <div class="message-detail">
@@ -36,7 +36,7 @@
                     
                       <div class="chat-bubble right">
       
-                          <div class="message bold" ng-bind-html="message.text | nl2br" autolinker>
+                          <div class="message bold" ng-bind-html="message.text | nl2br">
                           </div>
       
                           <div class="message-detail">
