--- a/greenEd/www/css/style.css
+++ b/greenEd/www/css/style.css
@@ -115,6 +115,7 @@ text {
   top: -150px;
   width: 100%;
   height: 150px;
+  background: url(../img/bg.jpg) 98% 30% no-repeat;
 }
 #profile-bg img {
   width: 100%;
