--- a/greenEd/www/templates/account.html
+++ b/greenEd/www/templates/account.html
@@ -1,19 +1,24 @@
 <ion-view>
    <ion-nav-title>{{user.name}} Profile</ion-nav-title>
    <ion-content class="has-header">
-      <div id="profile-bg"><img src="../images/bg.jpg"></div>
+      <div id="profile-bg"></div>
       <div id="content" ng-hide="loading">
         <div id="profile-info">
-<!--           <img id="profile-image" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/94311/me.png"> -->
           <div id="profile-image"><i class="icon ion-person positive"></i></div>
           <h3 id="profile-name">{{user.name}}</h3>
         </div>
-<!--         <a class="item item-icon-left" listtodash id="{{user._id}}-{{user.name}}" href="#/app/studentdashboard"><i class="icon ion-person positive"></i> {{user.name}}</a> -->
       <ion-list ng-if="user.role == 'hm'">
-        <ion-item>
+        <ion-item class="item item-icon-left" href="#">
+          <i class="icon ion-ios-home positive"></i><h2>{{user.school}}</h2>
+        </ion-item>
+        <ion-item class="item item-icon-left" href="#">
+          <i class="icon ion-ios-telephone-outline positive"></i><h2>{{user.email.replace("@ge.com", "")}}</h2>
         </ion-item>
       </ion-list>
       <ion-list ng-if="user.role == 'teacher'">
+        <ion-item class="item item-icon-left" href="#">
+          <i class="icon ion-ios-home positive"></i><h2>{{user.school}}</h2>
+        </ion-item>
         <ion-item class="item item-icon-left" href="#">
           <i class="icon ion-ios-telephone-outline positive"></i><h2>{{user.phone}}</h2>
         </ion-item>
@@ -23,16 +28,21 @@
         <ion-item class="item-icon-left" href="#/app/timetable/{{user.uid}}">
           <i class="icon ion-ios-time-outline positive"></i><h2>TimeTable</h2>
         </ion-item>
+      </ion-list>
       <ion-list ng-if="user.role == 'parent'">
+        <ion-item class="item item-icon-left" href="#">
+          <i class="icon ion-ios-home positive"></i><h2>{{user.school}}</h2>
+        </ion-item>
         <ion-item class="item item-icon-left" href="#">
           <i class="icon ion-ios-telephone-outline positive"></i><h2>{{user.phone}}</h2>
         </ion-item>
-        <ion-item class="item-icon-left positive"><i class="icon ion-clock"></i><strong>{{student.name}}</strong></ion-item>
-        <ion-item class="item-icon-left positive"><i class="icon ion-clock"></i><h2>{{student.studentid}}</h2></ion-item>
-        <ion-item class="item-icon-left positive" href="#" ng-if="user.sex"><i ng-class="{'icon ion-woman positive': user.sex == 'female', 'icon ion-man positive': user.sex == 'male'}"></i><h2>{{student.sex}}</h2>
+        <span ng-repeat="student in user.students">
+        <ion-item class="item-icon-left positive"><i class="icon ion-person"></i><strong>{{student.name}}</strong></ion-item>
+        <ion-item class="item-icon-left positive"><i class="icon ion-information"></i><h2>{{student.studentid}}</h2></ion-item>
+        <ion-item class="item-icon-left positive" href="#"><i ng-class="{'icon ion-woman positive': student.sex == 'Female', 'icon ion-man positive': student.sex == 'Male'}"></i><h2>{{student.sex}}</h2>
         </ion-item>
-        <ion-item class="item-icon-left positive"><i class="icon ion-clock"></i><h2>{{student.teacher}}</h2></ion-item>
-        <ion-item class="item-icon-left positive"><i class="icon ion-easel positive"></i><h2>{{student.standard}}{{student.division}}</h2>
+        <ion-item class="item-icon-left positive"><i class="icon ion-ios-body"></i><h2>{{student.teacher}}</h2></ion-item>
+        <ion-item class="item-icon-left positive"><i class="icon ion-easel positive"></i><h2>{{student.standard}}-{{student.division}}</h2>
         </ion-item>
         <ion-item class="item-icon-left positive" href="#"><i class="icon ion-home positive"></i><h2>{{student.address}}</h2>
         </ion-item>
