--- a/greenEd/www/templates/markstudents.html
+++ b/greenEd/www/templates/markstudents.html
@@ -13,8 +13,14 @@
     </ion-nav-buttons>
    <ion-content class="has-header">
    	  <div ng-if="filterStatus" style="height:44px;"></div>
-      <ion-list>
+      <ion-list ng-if="role != 'parent'">
          <ion-item collection-repeat="user in users | filter:query.search.value" class="item item-icon-left positive" href="#/app/studentdashboard/{{user.class}}/{{user.uid}}/{{user.name}}">
+            <i class="icon ion-person"></i>
+            <h2>{{user.class.replace("-all", "")}} : {{user.name}}</h2>
+         </ion-item>
+      </ion-list>
+      <ion-list ng-if="role == 'parent'">
+         <ion-item collection-repeat="user in users | filter:query.search.value" class="item item-icon-left positive" href="#">
             <i class="icon ion-person"></i>
             <h2>{{user.class.replace("-all", "")}} : {{user.name}}</h2>
          </ion-item>
