--- a/greenEd/www/templates/hmdashboard.html
+++ b/greenEd/www/templates/hmdashboard.html
@@ -4,6 +4,11 @@
    </ion-nav-buttons>
    <ion-content class="has-header" >
       <ion-refresher pulling-text="Pull to refresh" on-refresh="getMarksData(false)"></ion-refresher>
+       <div ng-show="loading" class="list">
+    <a class="item center" href="#">
+    <ion-spinner icon="android"></ion-spinner>
+    </a>
+   </div>
       <ion-list ng-show="empty">
          <ion-item class="item item-icon-left"><i class="icon ion-ios-list positive"></i>Dashboard is empty</ion-item>
       </ion-list>
