--- a/greenEd/www/templates/allclasses.html
+++ b/greenEd/www/templates/allclasses.html
@@ -13,6 +13,11 @@
    <ion-content class="has-header">
    	  <div ng-if="filterStatus" style="height:44px;"></div>
       <ion-refresher pulling-text="Pull to refresh" on-refresh="fetchData(true)"></ion-refresher>
+      <div ng-show="loading" class="list">
+    <a class="item center" href="#">
+    <ion-spinner icon="android"></ion-spinner>
+    </a>
+   </div>
    <!--       <div class="item-input-inset">
             <ion-search placeholder="Search" filter="query.search"></ion-search>
          </div> -->
