--- a/greenEd/www/templates/allteachers.html
+++ b/greenEd/www/templates/allteachers.html
@@ -13,6 +13,11 @@
    <ion-content class="has-header">
    	  <div ng-if="filterStatus" style="height:44px;"></div>
       <ion-refresher pulling-text="Pull to refresh" on-refresh="fetchData(true)"></ion-refresher>
+      <div ng-show="loading" class="list">
+    <a class="item center" href="#">
+    <ion-spinner icon="android"></ion-spinner>
+    </a>
+   </div>
       <ion-list>
          <ion-item collection-repeat="teacher in teachers | filter:query.search.value" class="item item-icon-left positive" href="#/app/teacherdashboard/{{teacher.uid}}/{{teacher.name}}">
             <i class="icon ion-person"></i>
