--- a/greenEd/www/templates/studentdashboard.html
+++ b/greenEd/www/templates/studentdashboard.html
@@ -1,4 +1,4 @@
-<ion-view cache-view="false">
+<ion-view>
    <ion-nav-title>{{title}}</ion-nav-title>
    <ion-nav-buttons side="right">
    <button ng-show="dashboard" class="button button-icon button-clear ion-funnel" ng-click="filterData()"></button>
