new app feel with offline

--- a/greenEd/www/css/style.css
+++ b/greenEd/www/css/style.css
@@ -335,3 +335,7 @@ a.autolinker {
 .loader .ion-loading-c {
   font-size: 64px;
 }
+.tabs-bottom .pane.tab-content {
+  top: 44px;
+}
+.empty-slide .slider-pager {display: none;}
