--- a/greenEd/www/templates/allclasses.html
+++ b/greenEd/www/templates/allclasses.html
@@ -22,7 +22,7 @@
       </div>
       <div class="list" ng-if="status == false">
          <a class="item" href="#">
-            <p>No students found</p>
+            <p>No class found</p>
          </a>
       </div>
       <div id="cleanup"></div>
