--- a/greenEd/www/templates/allstudents.html
+++ b/greenEd/www/templates/allstudents.html
@@ -1,5 +1,4 @@
-<ion-view hide-nav-bar="filterStatus">
-   <ion-nav-title>{{title}}</ion-nav-title>
+<ion-view hide-nav-bar="filterStatus" title="All Students">
     <div class="bar bar-header item-input-inset header-search bar-positive padding" ng-show="filterStatus">
     <span class="left-buttons">
 	<button class="button button-icon button-clear ion-android-arrow-back" ng-click="filterStatus = !filterStatus"></button>
