--- a/greenEd/www/templates/wall.html
+++ b/greenEd/www/templates/wall.html
@@ -1,4 +1,4 @@
-<ion-view title="Wall">
+<ion-view cache-view="false" title="Wall">
   <ion-nav-buttons side="right">
       <button ng-if="addwall" class="button button-icon button-clear ion-ios-plus-outline" ng-click="addpost()"></button>
   </ion-nav-buttons>
