--- a/greenEd/www/templates/timetable.html
+++ b/greenEd/www/templates/timetable.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Intro">
+<ion-view>
   <ion-nav-title class="title title-center">{{title}}</ion-nav-title>
   <ion-nav-buttons side="left">
     <button class="button button-icon button-clear ion-navicon show" menu-toggle="left"></button>
@@ -7,15 +7,23 @@
     </button>
   </ion-nav-buttons>
   <ion-nav-buttons side="right">
-    <button class="button button-icon button-clear ion-arrow-right-c"
+    <button ng-show="data" class="button button-icon button-clear ion-arrow-right-c"
             ng-click="next()" ng-if="data.slideIndex  != (data.slides.length - 1)">
     </button>
   </ion-nav-buttons>
   <ion-slide-box ng-if="data" on-slide-changed="slideChanged(index)">
       <ion-slide ng-repeat="slide in data.slides">
-      <ion-list>
-        <ion-item ng-repeat="item in slide" class="item item-icon-left positive" href="#"><i class="icon ion-ios-book"></i><h2>{{item.time}} - {{item.subject}}<span ng-show="classStatus"> : {{item.class}}</span></h2></ion-item>
+        <div ng-show="loading" class="center padding"><ion-spinner icon="android"></ion-spinner></div>
+        <ion-list>
+        <ion-item ng-repat="item in slide" class="item item-icon-left positive" href="#"><i class="icon ion-ios-book"></i><h2>{{item.time}} - {{item.subject}}<span ng-show="classStatus"> : {{item.class}}</span></h2></ion-item>
         </ion-list>
+      </ion-slide>
+  </ion-slide-box>
+  <ion-slide-box ng-if="!data" class="empty-slide">
+      <ion-slide>
+      <ion-list>
+        <ion-item class="item item-icon-left positive" href="#"><i class="icon ion-ios-book"></i><h2>No Timetable Found</h2></ion-item>
+      </ion-list>
       </ion-slide>
   </ion-slide-box>
 </ion-view>
