worked backend add teacher

--- a/greenEdBackend/app/views/login.html
+++ b/greenEdBackend/app/views/login.html
@@ -10,7 +10,7 @@
                     <a data-toggle="modal" href="#myModal"> Forgot Password?</a>
                 </span>
             </label>
-            <button class="btn btn-lg btn-login btn-block" type="submit" ng-click="passwordLogin(email, pass)">Sign in</button>
+            <button class="btn btn-lg btn-info btn-block" type="submit" ng-click="passwordLogin(email, pass)">Sign in</button>
 
         </div>
 
