--- a/greenEdBackend/app/views/addteacher.html
+++ b/greenEdBackend/app/views/addteacher.html
@@ -10,11 +10,11 @@
 	   <div class="landing-form-widget">
 	      <div class="widget-wrapper">
 	         <div class="content-wrapper">
-	         	<div class="form-wrapper" ng-show="import">
+	         	<div class="form-wrapper" ng-show="import"><br>
 					<form role="form" ng-submit="csvImport(csv.result)">   	   
-					   <legend>Import Teachers</legend>
-					    <ng-csv-import content="csv.content" header="true" separator=";" result="csv.result"></ng-csv-import>
-					    <button type="submit" class="btn btn-info"><i class="fa fa-download"></i> Import</button>
+					   <legend><center>Import Teachers</center></legend><br>
+					    <center><ng-csv-import content="csv.content" header="true" separator=";" result="csv.result"></ng-csv-import></center><br>
+					    <center><button type="submit" class="btn btn-info"><i class="fa fa-download"></i> Import</button></center>
 					</form>
 	         	</div>
 	         	<div class="message center" ng-if="msg != ''">
@@ -26,6 +26,8 @@
 	               <ul class="breadcrumb clearfix">
 	               <li ng-if="teacher.name">{{teacher.name}}</li>
 	               <li ng-if="teacher.phone">{{teacher.phone}}</li>
+	               <li ng-if="teacher.subject">{{teacher.subject}}</li>
+	               <li ng-if="teacher.class">{{teacher.class}}</li>
 	               </ul>
 	               <div class="steps">{{step}}/3</div>
 	            </div>
@@ -36,13 +38,13 @@
 					      <div ng-switch-when="1">
 		                  	<div>
 		                        <legend>Enter Teacher Name</legend>
-		                        <input type="text" placeholder="" ng-model="teacher.name">
+		                        <input type="text" placeholder="Enter teacher name" ng-model="teacher.name">
 		                     </div>
 					      </div>
 					      <div ng-switch-when="2">
 		                     <div>
 		                        <legend> Enter your phone number</legend>
-		                        <input ng-model="teacher.phone" type="text">
+		                        <input ng-model="teacher.phone" placeholder="Enter your phone number" type="text">
 		                     </div>
 					      </div>
 					      <div ng-switch-when="3">
@@ -50,8 +52,8 @@
 		                        <legend>Enter Teacher's Subject and Class</legend>
 								<div class="row" ng-repeat="(k,v) in teacher.subjects">
 								  <div class="col-md-1"><button class="fbtn ibtn fa" ng-class="{ 'fa-plus-square-o' : k == 0, 'fa-trash-o' : k !== 0}" ng-click="(k == 0) ? createSubject(): removeSubject(k)"></button></div>
-								  <div class="col-md-6"><input placeholder="Subject" ng-model="teacher.subjects[k].subject" type="text"></div>
-								  <div class="col-md-5"><input placeholder="Class" ng-model="teacher.subjects[k].class" type="text"></div>
+								  <div class="col-md-6"><input placeholder="Subject" ng-model="teacher.subject" type="text"></div>
+								  <div class="col-md-5"><input placeholder="Class" ng-model="teacher.class" type="text"></div>
 								</div>
 		                    </div>
 					      </div>
